Fixed on Mobile

--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ main {
 .row div {
     display: flex;
     justify-content: center;
+    width: 50px;
     height: 50px;
 }
 
@@ -115,7 +116,7 @@ main {
 }
 
 main {
-    width: 500px;
+    width: 100vw;
 }
 }
 
